Expanded architecture with fixtures and reporting.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 #log4j.debug=false
 log4j.rootLogger = OFF, stderr
 
-log4j.logger.nl.nuggit.blanket.BlanketTest = DEBUG
+log4j.logger.nl.nuggit.blanket = DEBUG
 
 log4j.appender.stderr = org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target = System.err
